add dasboard sidebar

--- a/src/app/modules/constructify/pages/dashboard/navbar/navbar.component.html
+++ b/src/app/modules/constructify/pages/dashboard/navbar/navbar.component.html
@@ -1,1 +1,18 @@
-<p>navbar works!</p>
+<div class="nav-container">
+	<div class="row">
+		<img class="m-auto" src="../../../../../assets/images/logo_green.png" />
+		<div id="nav-header">
+			<span>CONSTRUCTIFY</span>
+		</div>
+	</div>
+	<div class="row mt-5">
+			<div class="nav-menu" routerLink="/dashboard/home" routerLinkActive="active"><span><i class="fas fa-home"></i> HOME</span></div>
+	</div>
+	<div class="row">
+			<div class="nav-menu" routerLink="/dashboard/inventory" routerLinkActive="active"><span><i class="fas fa-dice-five"></i> INVENTORY</span></div>
+	</div>
+	<div class="row">
+			
+			<div class="nav-menu" routerLink="/dashboard/profile" routerLinkActive="active"><span><i class="fas fa-user"></i> PROFILE</span></div>
+	</div>
+</div>
