--- a/src/app/modules/constructify/pages/login/login.component.html
+++ b/src/app/modules/constructify/pages/login/login.component.html
@@ -1,26 +1,30 @@
-
-
 <div class="row" style="height: 100%">
     <div class="col-4">
-        <div id="sideBarLogin">
-            <img id="logo" src="../../../../../assets/images/logo.png"/>
-            <span id="sideBarLabel">CONSTRUCTIFY</span></div>
+      <div id="sideBarLogin">
+        <img id="logo" src="../../../../../assets/images/logo.png" />
+        <span id="sideBarLabel">CONSTRUCTIFY</span>
+      </div>
     </div>
-    
-    <div class="col" >
-        <div id="loginContainer"> 
-
-            <div class="row" ><img id="avatar" src="../../../../../assets/images/Avatar.png"/></div>
-            <div class="row" id="hello-user">Hello, Sandy</div>
-            <div class="row mt-3" id="welcome-message">Welcome back. <br/> Login to your account</div>
-            
-            <div class="row" style="margin-top:40px"><input type="text" placeholder="Enter Password"/></div>
-            <div class="row"><img id="loginButton" (click)="login()" src="../../../../../assets/images/Button Main.png"/></div>
-            <div class="row" id="loginOptions"><a href="#">Not you? </a> <a id="problem" href="#">Problems logging in?</a></div>
-        </div>      
+    <div class="col">
+      <div id="loginContainer">
+        <div class="row">
+          <img id="avatar" src="../../../../../assets/images/Avatar.png" />
+        </div>
+        <div class="row" id="hello-user">Hello, Sandy</div>
+        <div class="row mt-3" id="welcome-message">
+          Welcome back.
+          <br/> Login to your account
+        </div>
+        <div class="row" style="margin-top:40px">
+          <input type="text" placeholder="Enter Password" />
+        </div>
+        <div class="row">
+          <img id="loginButton" (click)="login()" src="../../../../../assets/images/Button Main.png" />
+        </div>
+        <div class="row" id="loginOptions">
+          <a href="#">Not you? </a>
+          <a id="problem" href="#">Problems logging in?</a>
+        </div>
+      </div>
     </div>
-</div>
-
-
-
-
+  </div>
