--- a/src/app/modules/constructify/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/constructify/pages/dashboard/dashboard.component.html
@@ -1,2 +1,11 @@
-<app-navbar></app-navbar>
-<app-notificationsbar></app-notificationsbar>
+<div class="row" id="dashboardContainer">
+  <div class="col-2">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="col-3">
+    <app-notificationsbar></app-notificationsbar>
+  </div>
+</div>
