--- a/src/app/modules/constructify/pages/dashboard/home/home.component.html
+++ b/src/app/modules/constructify/pages/dashboard/home/home.component.html
@@ -1,1 +1,54 @@
-<p>home works!</p>
+<div id="homeContainer">
+   
+    <div class="row">
+        <img id="avatar" src="../../../../../assets/images/Avatar.png" />
+        <span id="homeHeader">What do you want to do today?</span>
+    </div>
+    <div class="row mt-4">
+        <div class="col-3">
+            <div class="action-icon"><i class="fas fa-boxes"></i></div>
+            <span class="action-label">Request Materials</span>
+        </div>
+        <div class="col-3">
+                <div class="action-icon"><i class="fas fa-hand-paper"></i></div>
+                <span class="action-label">Raise Issue</span>
+            </div>
+            <div class="col-3">
+                
+                    <div class="action-icon"><i class="fas fa-hotel"></i></div>
+                    <span class="action-label">Add Project</span>
+                </div>
+
+    </div>
+    <div class="row mt-4">
+        <div class="project-card">
+                <div id="project-image"><span class="label">Cerulean Ridge</span></div>
+            <div class="inventory-summary">
+                    <span>Inventory</span><span class="float-right">80%</span>
+                    <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            </div>
+                          </div>
+            </div>
+            
+        </div>
+        <div class="project-card">
+                <div id="project-image-2"><span class="label">Sonrisa Hotel and Casino</span></div>
+            <div class="inventory-summary">
+                    <span>Inventory</span><span class="float-right">30%</span>
+                    <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width:30%;background-color: #ffc107;">
+                            </div>
+                          </div>
+            </div>
+            
+        </div>
+
+    </div>
+    <div class="row">
+            <div class="project-card">
+                Inventory
+                </div>
+    </div>
+
+</div>
