--- a/src/app/modules/constructify/pages/dashboard/inventory/inventory.component.html
+++ b/src/app/modules/constructify/pages/dashboard/inventory/inventory.component.html
@@ -1,1 +1,7 @@
-<p>inventory works!</p>
+
+<div id="inventoryContainer">
+    <span>Cerulian Ridge <i class="fas fa-caret-down" title="This symbolizes your being locked inside"></i></span>
+    <table datatable [dtOptions]="dtOptions" class="table table-striped hover display compact"></table>
+</div>
+
+
