--- a/src/app/modules/constructify/pages/dashboard/home/home.component.html
+++ b/src/app/modules/constructify/pages/dashboard/home/home.component.html
@@ -45,6 +45,19 @@
         </div>
 
     </div>
+
+    <div class="row mt-5">
+        <div class="request-card">
+            Requests<span class="float-right"><a>VIEW ALL</a></span>
+            <br/>
+
+            <span class="ml-2 mt-1">Pending Approval/s</span> <span class="float-right mr-2">1</span>
+            <hr class="m-0">
+            <span class="ml-2">Received</span><span class="float-right mr-2">2</span>
+        </div>
+
+
+    </div>
     
 
 </div>
