--- a/src/app/modules/constructify/pages/login/login.component.scss
+++ b/src/app/modules/constructify/pages/login/login.component.scss
@@ -1,4 +1,6 @@
 #sideBarLogin{
+    margin-right: 20px;
+    transform: scale(1.18);
     padding-right: 30px;
     text-align: center;
     height: 100%;
