--- a/src/app/modules/constructify/pages/dashboard/navbar/navbar.component.html
+++ b/src/app/modules/constructify/pages/dashboard/navbar/navbar.component.html
@@ -6,13 +6,15 @@
 		</div>
 	</div>
 	<div class="row mt-5">
-			<div class="nav-menu" routerLink="/dashboard/home" routerLinkActive="active"><span><i class="fas fa-home"></i> HOME</span></div>
+		<div class="nav-menu" routerLink="/dashboard/home" routerLinkActive="active"><span><i class="fas fa-home"></i> HOME</span></div>
 	</div>
 	<div class="row">
-			<div class="nav-menu" routerLink="/dashboard/inventory" routerLinkActive="active"><span><i class="fas fa-dice-five"></i> INVENTORY</span></div>
+		<div class="nav-menu" routerLink="/dashboard/inventory" routerLinkActive="active"><span><i class="fas fa-dice-five"></i> INVENTORY</span></div>
 	</div>
 	<div class="row">
-			
-			<div class="nav-menu" routerLink="/dashboard/profile" routerLinkActive="active"><span><i class="fas fa-user"></i> PROFILE</span></div>
+		<div class="nav-menu" routerLink="/dashboard/profile" routerLinkActive="active"><span><i class="fas fa-user"></i> PROFILE</span></div>
 	</div>
+	<div class="row">
+			<div class="nav-menu" routerLink="#" routerLinkActive="active"><span><i class="fas fa-file-contract"></i> REQUEST</span></div>
+		</div>
 </div>
