--- a/src/app/modules/constructify/pages/dashboard/notificationsbar/notificationsbar.component.html
+++ b/src/app/modules/constructify/pages/dashboard/notificationsbar/notificationsbar.component.html
@@ -1,4 +1,8 @@
 <div class="notif-container">
         <i class="fas fa-bell"></i>
         <span id="notifs">Notifs</span>
+        <br/><br/>
+        <span id="notifs" class="ml-0">Your request #1456 for Dining Table has been approved!.</span>
+        <br/><br/>
+        <span id="notifs" class="ml-0">Your request #3456 for Kitchen has been approved!.</span>
 </div>
