--- a/src/app/modules/constructify/pages/dashboard/inventory/inventory.component.scss
+++ b/src/app/modules/constructify/pages/dashboard/inventory/inventory.component.scss
@@ -1,12 +1,11 @@
 #inventoryContainer{
     span{
         font-size: 30px;
-    font-weight: 600;
-    color: #1f4e58;
+        font-weight: 600;
+        color: #1f4e58;
     }
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
     height: 100%;
-    padding: 120px 50px;
+    padding: 100px 50px 120px 30px;
     font-size: 14px !important;
-   
 }
